# mail_converter

./: .gitignore  LICENSE  README.md  mail_converter.spec  main.py  pyproject.toml  requirements.txt  run_linux.sh  run_mac.sh  setup.sh
.github/workflows/: build.yml
assets/: .gitkeep
core/: __init__.py  attachment_converter.py  conversion_pipeline.py  duplicate_detector.py  email_fingerprint.py  email_to_pdf.py  eml_parser.py  mailbox_comparator.py  mailbox_deduplicator.py  mailbox_filter.py  mailbox_merger.py  mailbox_writer.py  mbox_extractor.py  msg_parser.py  pdf_merger.py  pst_extractor.py  rtf_converter.py
experiments/: analyze_font.py  analyze_rtf_types.py  debug_bs4_corruption.py  debug_compare.py  debug_exact_fix.py  debug_font_fix.py  debug_font_fix2.py  debug_font_fix3.py  debug_raw_structure.py  debug_trace_corruption.py  mapi_diagnostic.py  mapi_direct_session.py  mapi_eml_import.py  mapi_exploration.py  mapi_minimal_test.py  mapi_pst_create.py  mapi_session.py  mapi_session_outlook.py  test_rtf_emails.py
gui/: __init__.py  email_tools_tab.py  main_window.py  progress_dialog.py  settings_dialog.py
tests/: test_core.py
utils/: __init__.py  file_utils.py  progress_tracker.py  system_info.py
